fetch data from external api

--- a/views/menu_item_views.xml
+++ b/views/menu_item_views.xml
@@ -32,5 +32,18 @@
                 parent='hotel_menu'
                 sequence='2'/>
 
+        <record id='action_hotel_api' model='ir.actions.act_window'>
+            <field name='name'>Hotel api</field>
+            <field name='res_model'>hotels.api</field>
+            <field name='view_mode'>tree,form</field>
+        </record>
+
+        <menuitem
+                id='menu_hotel_api'
+                action='action_hotel_api'
+                name='Api Hotel'
+                parent='hotel_menu'
+                sequence='3'/>
+
     </data>
 </odoo>
